<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="uz.a1uz.a1uzdirector.Activity.TablesActivitys.BankTables.AccountsTable">
    <ProgressBar
        android:padding="25dp"
        android:id="@+id/progres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progressbarcust"
        android:indeterminateOnly="true"/>

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_width="wrap_content"
            android:scrollbarStyle="outsideOverlay"
            >
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tableForBank"
                >
                <TableRow android:background="@color/tableTopColor"

                    >
                    <TextView
                        android:text="@string/Scheta"
                        android:layout_gravity="center|center_horizontal"
                        android:padding="5dip"
                        android:textColor="@color/textColor"/>
                    <TextView

                        android:text="@string/BeginDay"
                        android:gravity="center"
                        android:padding="5dip"
                        android:textColor="@color/textColor"
                        />
                    <TextView

                        android:text="@string/InSum"
                        android:gravity="center"
                        android:padding="5dip"
                        android:textColor="@color/textColor"
                        />
                    <TextView

                        android:text="@string/OutSum"
                        android:gravity="center"
                        android:padding="5dip"
                        android:textColor="@color/textColor"

                        />
                    <TextView
                        android:text="@string/CurrentSum"
                        android:padding="5dip"
                        android:textColor="@color/textColor"
                        />
                </TableRow>


            </TableLayout>
        </HorizontalScrollView>


</LinearLayout>
