<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TableHeaderTextSize"
        android:text="@string/WriteINN_For_pay" />

    <TextView
        android:id="@+id/erorr_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:text=""
        android:visibility="gone" />

    <EditText
        android:id="@+id/INN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/inn"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:visibility="visible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payfor"
        android:onClick="check"
        android:id="@+id/btPay"
        android:background="@color/ButtColor"
        android:layout_marginBottom="10dp" />

</LinearLayout>