<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uz.a1uz.a1uzdirector.Activity.Login_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/app_name"
                android:id="@+id/Info_text"/>
            <ToggleButton
                android:layout_column="2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/toggleButton"
                android:checked="false"
                android:background="#a3db00"

                android:textOff="UZ"
                android:textOn="РУ"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/INN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/inn"
                android:inputType="none|number"
                android:maxEms="3"
                android:numeric="integer"
                android:padding="5dp"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:visibility="visible" />
            <Spinner android:id="@+id/spinn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                />
        </GridLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/password"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:padding="5dp"
            android:layout_marginBottom="10dp"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:onClick="check"
            android:id="@+id/btLogin"
            android:background="#a3db00"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</GridLayout>
